Replace remaining 'browser' in spec with 'user agent'

--- a/draft-west-http-state-tokens.html
+++ b/draft-west-http-state-tokens.html
@@ -795,7 +795,7 @@ Accept: */*
 <a href="#rfc.section.7.4">7.4.</a> <a href="#lifetime" id="lifetime">Lifetime</a>
 </h1>
 <p id="rfc.section.7.4.p.1">By default, HTTP State Tokens live for an hour, which is a compromise between the reasonable desire of servers to maintain state across a given user&#8217;s session, and the privacy risks associated with long-lived tokens stored on a user&#8217;s disk.</p>
-<p id="rfc.section.7.4.p.2">Servers that desire a longer session lifetime can explicitly request an extension, which the browser can choose to act on.</p>
+<p id="rfc.section.7.4.p.2">Servers that desire a longer session lifetime can explicitly request an extension, which the user agent can choose to act on.</p>
 <h1 id="rfc.section.7.5">
 <a href="#rfc.section.7.5">7.5.</a> <a href="#ambient-authority-and-cross-site-delivery" id="ambient-authority-and-cross-site-delivery">Ambient Authority and Cross-Site Delivery</a>
 </h1>
